// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withBoundary should do nothing if there is no error 1`] = `
<div>
  Fine
</div>
`;

exports[`withBoundary should match snapshot 1`] = `
<div>
  <h1>
    Something went wrong.
  </h1>
</div>
`;
